committing UI designs

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 /*----------------------------------------------------------------------------------------
 * Author : Awaiken
-* Template Name : Jivux - Real Estate HTML Template
+* Template Name : Dream Area - Property in Jaipur | Real Estate Jaipur
 * File : CSS File
 * Version : 1.0
 *---------------------------------------------------------------------------------------- */
